Add background image to the header

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,3 +11,7 @@ html{
 	font-size: 20px;
 	text-rendering: optimizeLegibility;
 }
+header{
+	background-image: url(img/hero.jpg);
+	height: 100vh;
+}
