Some styles to the header

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,4 +14,10 @@ html{
 header{
 	background-image: url(img/hero.jpg);
 	height: 100vh;
+	background-position: center;
+	background-size: cover;
+}
+
+h1{
+	margin: 0;
 }
