--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,13 +11,23 @@ html{
 	font-size: 20px;
 	text-rendering: optimizeLegibility;
 }
+.row{
+	max-width: 1140px;
+	margin: 0 auto;
+}
 header{
 	background-image: url(img/hero.jpg);
 	height: 100vh;
 	background-position: center;
 	background-size: cover;
 }
-
+.hero-text-box{
+	position: absolute;
+	width: 1140px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
 h1{
 	margin: 0;
 }
