--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,7 +16,7 @@ html{
 	margin: 0 auto;
 }
 header{
-	background-image: url(img/hero.jpg);
+	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
 	height: 100vh;
 	background-position: center;
 	background-size: cover;
