--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -30,4 +30,10 @@ header{
 }
 h1{
 	margin: 0;
+	font-size: 240%;
+	color: #fff;
+	font-weight: 300;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	word-spacing: 4px;
 }
