--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -29,11 +29,29 @@ header{
 	transform: translate(-50%, -50%);
 }
 h1{
-	margin: 0;
+	margin-top: 0;
+	margin-bottom: 20px;
 	font-size: 240%;
 	color: #fff;
 	font-weight: 300;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	word-spacing: 4px;
+}
+.btn{
+	display: inline-block;
+	padding: 10px 30px;
+	font-weight: 300;
+	text-decoration: none;
+	border-radius: 200px;
+	padding-bottom: 13px;
+}
+.btn-full{
+	background-color: #e67e22;
+	border: 1px solid #e67e22;
+	color: #fff;
+}
+.btn-ghost{
+	border: 1px solid #e67e22;
+	color: #e67e22;
 }
