Add hover effect and some more styling to buttons

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -38,20 +38,34 @@ h1{
 	letter-spacing: 1px;
 	word-spacing: 4px;
 }
-.btn{
+.btn:link,
+.btn:visited{
 	display: inline-block;
 	padding: 10px 30px;
 	font-weight: 300;
 	text-decoration: none;
 	border-radius: 200px;
 	padding-bottom: 13px;
+	transition: background-color .3s ease, border .3s ease, color .3s ease;
 }
-.btn-full{
+.btn-full:link,
+.btn-full:visited{
 	background-color: #e67e22;
 	border: 1px solid #e67e22;
 	color: #fff;
+	margin-right: 15px;
 }
-.btn-ghost{
+.btn-ghost:link,
+.btn-ghost:visited{
 	border: 1px solid #e67e22;
 	color: #e67e22;
+}
+.btn:hover,
+.btn:active{
+	background-color: #cf6d17;
+	border: 1px solid #cf6d17;
+}
+.btn-ghost:hover,
+.btn-ghost:active{
+	color: #fff;
 }
