--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,7 @@
+/* ------------------------------------------------- */
+/*BASIC SETUP*/
+/* ------------------------------------------------- */
+
 *{
 	margin: 0;
 	padding: 0;
@@ -11,23 +15,18 @@ html{
 	font-size: 20px;
 	text-rendering: optimizeLegibility;
 }
+
+/* ------------------------------------------------- */
+/* REUSABLE COMPONENTS  */
+/* ------------------------------------------------- */
+
 .row{
 	max-width: 1140px;
 	margin: 0 auto;
 }
-header{
-	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
-	height: 100vh;
-	background-position: center;
-	background-size: cover;
-}
-.hero-text-box{
-	position: absolute;
-	width: 1140px;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
+
+
+/* -------- HEADINGS --------- */
 h1{
 	margin-top: 0;
 	margin-bottom: 20px;
@@ -38,6 +37,9 @@ h1{
 	letter-spacing: 1px;
 	word-spacing: 4px;
 }
+
+
+/* -------- BUTTONS --------- */
 .btn:link,
 .btn:visited{
 	display: inline-block;
@@ -68,4 +70,22 @@ h1{
 .btn-ghost:hover,
 .btn-ghost:active{
 	color: #fff;
+}
+
+/* ------------------------------------------------- */
+/* HEADER  */
+/* ------------------------------------------------- */
+
+header{
+	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
+	height: 100vh;
+	background-position: center;
+	background-size: cover;
+}
+.hero-text-box{
+	position: absolute;
+	width: 1140px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
