--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,7 @@
+/*
+orange: #e67e22;
+*/
+
 /* ------------------------------------------------- */
 /*BASIC SETUP*/
 /* ------------------------------------------------- */
@@ -88,4 +92,34 @@ header{
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+}
+.logo{
+	height: 100px;
+	width: auto;
+	float: left;
+	margin-top: 20px;
+}
+.main-nav{
+	float: right;
+	margin-top: 55px;
+}
+.main-nav li{
+	list-style: none;
+	display: inline-block;
+	margin-left: 40px;
+}
+.main-nav li a:link,
+.main-nav li a:visited{
+	padding: 8px 0;
+	text-decoration: none;
+	color: #fff;
+	text-transform: uppercase;
+	font-size: 90%;
+	border-bottom: 2px solid transparent;
+	transition: border-bottom .4s;
+}
+.main-nav li a:hover,
+.main-nav li a:active{
+	border-bottom: 2px solid #e67e22;
+	/*color: #e67e22;*/
 }
