--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -28,20 +28,39 @@ html{
 	max-width: 1140px;
 	margin: 0 auto;
 }
-
+section{
+	margin-top: 80px;
+}
 
 /* -------- HEADINGS --------- */
+h1,
+h2{
+	font-weight: 300;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+}
 h1{
 	margin-top: 0;
 	margin-bottom: 20px;
 	font-size: 240%;
 	color: #fff;
-	font-weight: 300;
-	text-transform: uppercase;
-	letter-spacing: 1px;
 	word-spacing: 4px;
 }
-
+h2{
+	font-size: 180%;
+	margin-bottom: 30px;
+	word-spacing: 2px;
+	text-align: center;
+}
+h2:after{
+	content: "";
+	display: block;
+	height: 3px;
+	width: 100px;
+	background-color: #e67e22;
+	margin: auto;
+	margin-top: 30px;
+}
 
 /* -------- BUTTONS --------- */
 .btn:link,
