Style the feature section some more

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -31,13 +31,16 @@ html{
 section{
 	margin-top: 80px;
 }
+.box{
+	padding: 1%;
+}
 
 /* -------- HEADINGS --------- */
 h1,
-h2{
+h2,
+h3{
 	font-weight: 300;
 	text-transform: uppercase;
-	letter-spacing: 1px;
 }
 h1{
 	margin-top: 0;
@@ -45,12 +48,18 @@ h1{
 	font-size: 240%;
 	color: #fff;
 	word-spacing: 4px;
+	letter-spacing: 1px;
 }
 h2{
 	font-size: 180%;
 	margin-bottom: 30px;
 	word-spacing: 2px;
 	text-align: center;
+	letter-spacing: 1px;
+}
+h3{
+	font-size: 110%;
+	margin-bottom: 15px;
 }
 h2:after{
 	content: "";
@@ -67,6 +76,10 @@ h2:after{
 	width: 68%;
 	line-height: 145%;
 	margin: 0 auto;
+}
+.box p{
+	font-size: 90%;
+	line-height: 145%;
 }
 
 /* -------- BUTTONS --------- */
