--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -172,6 +172,14 @@ header{
 }
 
 /* ------------------------------------------------- */
+/* FEATURES  */
+/* ------------------------------------------------- */
+
+.section-feature .long-copy{
+	margin-bottom: 30px;
+}
+
+/* ------------------------------------------------- */
 /* MEALS  */
 /* ------------------------------------------------- */
 .meals-showcase{
@@ -186,8 +194,17 @@ header{
 .meal-image{
 	width: 100%;
 	margin: 0;
+	overflow: hidden;
+	background-color: #000;
 }
 .meal-image img{
+	opacity: 0.7;
 	width: 100%;
 	height: auto;
+	transform: scale(1.15);
+	transition: transform 0.5s ease, opacity 0.5s ease;
+}
+.meal-image img:hover{
+	opacity: 1;
+	transform: scale(1.04);
 }
