--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -193,6 +193,7 @@ header{
 /* ------------------------------------------------- */
 /* MEALS  */
 /* ------------------------------------------------- */
+
 .section-meals{
 	padding: 0;
 }
@@ -273,3 +274,13 @@ header{
 /* ------------------------------------------------- */
 /* CITIES */
 /* ------------------------------------------------- */
+
+.box img{
+	width: 100%;
+	height: auto;
+	margin-bottom: 15px;
+}
+
+.cities-feature{
+	margin-bottom: 5px;
+}
