add a background image to the testimonials section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -317,3 +317,11 @@ header{
 .cities-feature{
 	margin-bottom: 5px;
 }
+
+/* ------------------------------------------------- */
+/* TESTIMONIALS */
+/* ------------------------------------------------- */
+
+.section-testimonials{
+	background-image: url(img/back-customers.jpg);
+}
