--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -132,7 +132,8 @@ a:hover{
 
 /* -------- BUTTONS --------- */
 .btn:link,
-.btn:visited{
+.btn:visited,
+input[type=submit] {
 	display: inline-block;
 	padding: 10px 30px;
 	font-weight: 300;
@@ -142,7 +143,8 @@ a:hover{
 	transition: background-color .3s ease, border .3s ease, color .3s ease;
 }
 .btn-full:link,
-.btn-full:visited{
+.btn-full:visited,
+input[type=submit] {
 	background-color: #e67e22;
 	border: 1px solid #e67e22;
 	color: #fff;
@@ -154,7 +156,9 @@ a:hover{
 	color: #e67e22;
 }
 .btn:hover,
-.btn:active{
+.btn:active,
+input[type=submit]:hover,
+input[type=submit]:active {
 	background-color: #cf6d17;
 	border: 1px solid #cf6d17;
 }
@@ -402,3 +406,28 @@ cite img{
 .plan-box ul li {
 	padding: 5px 0; 
 }
+
+/* ------------------------------------------------- */
+/* CONTACT */
+/* ------------------------------------------------- */
+
+.contact-form {
+	width: 60%;
+	margin: 0 auto;
+}
+input[type=text],
+input[type=email],
+select,
+textarea {
+	width: 100%;
+	border-radius: 3px;
+	padding: 7px;
+	border: 1px solid #ccc;
+}
+textarea {
+	height: 100px;
+}
+input[type=checkbox] {
+	margin: 10px 5px 10px 0;
+}
+*:focus {outline: none;}
