--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -431,3 +431,71 @@ input[type=checkbox] {
 	margin: 10px 5px 10px 0;
 }
 *:focus {outline: none;}
+
+/* ------------------------------------------------- */
+/* FOOTER */
+/* ------------------------------------------------- */
+
+footer {
+	background-color: #333;
+	padding: 50px;
+	font-size: 80%;
+}
+.footer-nav {
+	list-style: none;
+	float: left;
+}
+.social-links {
+	list-style: none;
+	float: right;
+}
+.footer-nav li,
+.social-links li {
+	display: inline-block;
+	margin-right: 20px;
+}
+.footer-nav li:last-child,
+.social-links li:last-child {
+	margin-right: 0;
+}
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited {
+	color: #888;
+	text-decoration: none;
+	border: none;
+	transition: color 0.2s ease;
+}
+.footer-nav li a:hover,
+.footer-nav li a:active {
+	color: #ddd;
+}
+.social-links a:link, 
+.social-links a:visited {
+	font-size: 160%;
+}
+.ion-social-facebook,
+.ion-social-twitter,
+.ion-social-googleplus,
+.ion-social-instagram {
+	transition: color .2s ease;
+}
+.ion-social-facebook:hover {
+	color: #3b5998;
+}
+.ion-social-twitter:hover {
+	color: #55acee;
+}
+.ion-social-googleplus:hover {
+	color: #dd4b39;
+}
+.ion-social-instagram:hover {
+	color: #125688;
+}
+footer p {
+	color: #888;
+	text-align: center;
+	font-size: 90%;
+	margin-top: 20px;
+}
